# tdc-hf

./: .gitignore  README.md  pyproject.toml
.githooks/: pre-commit
config/: analysis_fred_denton_shock.yml  analysis_fred_shock.yml  series_registry.yml  upstream_sources.yml
scripts/: hygiene_check.sh  run_qra_event_lp.sh
src/tdchf/: __init__.py  accounting.py  analysis_spec.py  anchor_variants.py  auction_shocks.py  benchmarking.py  bootstrap.py  calendar.py  calendar_controls.py  channel_context.py  cli.py  closeout.py  demo.py  diagnostics.py  disbursement.py  envelope.py  figures.py  first_stage.py  fiscaldata.py  fred.py  indicators.py  iv_robustness.py  live_indicators.py  local_sources.py  lp.py  manifest.py  method_status.py  model_panel.py  outcomes.py  pipeline.py  pretrend.py  proxy.py  qra_borrowing.py  (+11 more)
tests/: test_accounting.py  test_analysis_spec.py  test_anchor_variants.py  test_auction_shocks.py  test_benchmarking.py  test_bootstrap.py  test_calendar_controls.py  test_closeout.py  test_diagnostics_weekly.py  test_disbursement.py  test_envelope.py  test_figures.py  test_first_stage.py  test_fiscaldata.py  test_fred.py  test_indicators.py  test_iv_robustness.py  test_live_indicators.py  test_local_sources_context.py  test_loqo.py  test_lp_csv.py  test_manifest.py  test_method_status.py  test_model_panel.py  test_outcomes.py  test_panel_summary.py  test_pipeline.py  test_pretrend.py  test_qra_borrowing.py  test_qra_event_lp.py  test_reabsorption.py  test_regime.py  test_reporting.py  test_shocks_lp.py  test_thesis_outputs.py  test_upstream.py
(+2 files in other folders)
